asm_tests/other_testfiles/invalid_files/error47.s
.name "MORO"
.comment "MORJESTA!"

kissa:
ld %:kissa, :       
